--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "ejs": "^3.1.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "express": "^4.18.2",
+    "express-myconnection": "^1.0.4",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "next": "13.4.2",
+    "nodemon": "^2.0.22",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
