--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "express-myconnection": "^1.0.4",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "next": "13.4.2",
